--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ h1,h4 {
 .navigation_btn {
     width: 70px;
     height: 70px;
-    background-color: #F2F0EB;
+    background-color: #FFF;
     border-radius: 50%;
     position: fixed;
     top: 40px;
@@ -66,7 +66,7 @@ h1,h4 {
 .navigation_icon::after {
     width: 30px;
     height: 3px;
-    background-color: #7AB7A1;
+    background-color:#FFB71B;
     display: inline-block;
 }
 
@@ -123,7 +123,7 @@ h1,h4 {
 .nav_link {
     display: inline-block;
     font-size: 20px;
-    color: #6C9083;
+    color: #6D6E71;
     padding: 20px;
     text-transform: uppercase;
     font-family: 'Sansita', sans-serif;
@@ -132,7 +132,7 @@ h1,h4 {
 }
 
 .nav_link:hover {
-    color: #7AB7A1;
+    color: #FFB71B;
     transform: translateX(10px);
 }
 
@@ -174,7 +174,7 @@ h1,h4 {
 /*Content*/
 
 .home_content{
-    color: #D7921E;
+    color: #6D6E71;
     position: absolute;
     width: 238px;
     height: 147px;
@@ -212,7 +212,7 @@ h1,h4 {
 /*Information*/
 
 .information {
-    background-color: #DCDFDD;
+    background-color: #F2F0EB;
     position: absolute;
     width: 100%;
     height: 875px;
@@ -283,11 +283,12 @@ h1,h4 {
 }
 
 .brand_name{
-    left: 44%;
+    left: 50%;
+    text-align: center;
     position: absolute;
     bottom: -850px;
     font-size: 22px;
-    color: #6C9083;
+    color: #6D6E71;
     line-height: 140.62%;;
 }
 
@@ -298,22 +299,23 @@ h1,h4 {
     bottom: -890px;
     font-size: 18px;
     line-height: 140.62%;
-    color: #6C9083;
+    color: #6D6E71;
     left: 50%;
     right: 50%;
 }
 
 .team5{
     position: absolute;
-    width: 714px;
+    text-align: center;
+    /* width: 714px; */
     height: 35px;
-    left: 400px;
+    left: 50%;
     top: 1616px;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 140.62%;  
-    color: #6C9083;
+    color: #6D6E71;
     
       
 }
@@ -587,7 +589,7 @@ h1,h4 {
 .logo_footer {
     margin-top: 40px;
     text-align: center;
-    color: #6C9083;
+    color: #6D6E71;
 }
 
 .logo_name{
@@ -629,6 +631,7 @@ h1,h4 {
 
 .name {
     font-size: 20px;
+    font-family: 'PT Sans', sans-serif;
     margin-top: -70px;
     margin-left: 100px;
     color: #6D6E71;
@@ -751,7 +754,7 @@ h1,h4 {
 
 .footer {
     text-align: center;
-    color: #6C9083;
+    color: #6D6E71;
 }
 
 /*---------------------------Typography----------------------------*
@@ -1122,7 +1125,7 @@ h1,h4 {
     position: absolute;
     left: 548px;
     top: 1226px;
-    background: #6C9083;
+    background: #6D6E71;
 }
 
 .color_text3{
@@ -1454,7 +1457,7 @@ footer{
     position: relative;
     top: 2160px;
     text-align: center;
-    color: #6C9083;
+    color: #6D6E71;
     font-weight: bold;
     font-family: "Sansita", sans-serif;
 }
@@ -1724,7 +1727,7 @@ footer{
     position: absolute;
     bottom: -1440px;
     font-size: 22px;
-    color: #6C9083;
+    color: #6D6E71;
     left: 44%;
     line-height: 140.62%;;
 }
@@ -1736,7 +1739,7 @@ footer{
     bottom: -1480px;
     font-size: 18px;
     line-height: 140.62%;
-    color: #6C9083;
+    color: #6D6E71;
     left: 50%;
     right: 50%;
 }
