--- a/main.css
+++ b/main.css
@@ -132,7 +132,7 @@ h1,h4 {
     color: #6C9083;
     padding: 20px;
     text-transform: uppercase;
-    font-family: 'Sansita', sans-serif;
+    font-family: 'Vollkorn', sans-serif;
     text-decoration: none;    
     transition: all 0.4s;
 }
@@ -350,7 +350,7 @@ h1,h4 {
     font-size: 20px;
     color: #33393E;
     line-height: 46px;
-    font-family: 'Sansita', sans-serif;;
+    font-family: 'Vollkorn', sans-serif;;
 }
 
 .logo_page_topline {
@@ -382,7 +382,7 @@ h1,h4 {
     font-size: 20px;
     color: #33393E;
     line-height: 46px;
-    font-family: 'Sansita', sans-serif;;
+    font-family: 'Vollkorn', sans-serif;;
 }
 
 .color_pallete_topline {
@@ -435,7 +435,7 @@ h1,h4 {
     font-size: 20px;
     color: #33393E;
     line-height: 46px;
-    font-family: 'Sansita', sans-serif;
+    font-family: 'Vollkorn', sans-serif;
 }
 
 .alt_logo_topline {
@@ -536,7 +536,7 @@ h1,h4 {
     font-size: 20px;
     color: #33393E;
     line-height: 46px;
-    font-family: 'Sansita', sans-serif;
+    font-family: 'Vollkorn', sans-serif;
 }
 
 .wordmark_topline{
@@ -647,7 +647,7 @@ h1,h4 {
     font-size: 20px;
     color: #33393E;
     line-height: 46px;
-    font-family: 'Sansita', sans-serif;;
+    font-family: 'Vollkorn', sans-serif;;
 }
 
 .boxes {
@@ -689,7 +689,7 @@ h1,h4 {
     font-size: 20px;
     color: #33393E;
     line-height: 46px;
-    font-family: 'Sansita', sans-serif;;
+    font-family: 'Vollkorn', sans-serif;;
 }
 
 .par2 {
@@ -852,7 +852,7 @@ h1,h4 {
 }
 
 .typeface2 span{
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 22px;
@@ -868,7 +868,7 @@ h1,h4 {
 }
 
 .typeface3 span{
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-weight: bold;
     font-size: 20px;
 }
@@ -882,7 +882,7 @@ h1,h4 {
 }
 
 .typeface4 span{
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-weight: 800;
     font-size: 20px;
 }
@@ -896,7 +896,7 @@ h1,h4 {
 }
 
 .typeface5 span{
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-weight: 900;
     font-size: 20px;
 }
@@ -925,7 +925,7 @@ h1,h4 {
 }
 
 .text_size span{
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
@@ -936,7 +936,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 756px;
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 48px;
@@ -953,7 +953,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 824px;
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 40px;
@@ -970,7 +970,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 895px;
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 32px;
@@ -987,7 +987,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 962px;
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
@@ -1004,7 +1004,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 1027px;
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
@@ -1021,7 +1021,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 1089px;
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
@@ -1047,7 +1047,7 @@ h1,h4 {
     position: absolute;
     left: 800px;
     top: 769px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -1058,7 +1058,7 @@ h1,h4 {
     position: absolute;
     left: 800px;
     top: 901px;
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 24px;
@@ -1069,7 +1069,7 @@ h1,h4 {
     position: absolute;
     left: 800px;
     top: 952px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -1211,7 +1211,7 @@ h1,h4 {
 }
 
 .rubik_typeface2 span{
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 22px;
@@ -1225,7 +1225,7 @@ h1,h4 {
 }
 
 .rubik_typeface3 span{
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-weight: 500;
     font-size: 20px;
 }
@@ -1237,7 +1237,7 @@ h1,h4 {
 }
 
 .rubik_typeface4 span{
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-weight: bold;
     font-size: 20px;
 }
@@ -1249,7 +1249,7 @@ h1,h4 {
 }
 
 .rubik_typeface5 span{
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-weight: 800;
     font-size: 20px;
 }
@@ -1261,7 +1261,7 @@ h1,h4 {
 }
 
 .rubik_typeface6 span{
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-weight: 900;
     font-size: 20px;
 }
@@ -1288,7 +1288,7 @@ h1,h4 {
 }
 
 .rubik_text_size span{
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
@@ -1299,7 +1299,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 1678px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 48px;
@@ -1316,7 +1316,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 1746px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 40px;
@@ -1333,7 +1333,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 1817px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 32px;
@@ -1350,7 +1350,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 1884px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
@@ -1367,7 +1367,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 1949px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
@@ -1384,7 +1384,7 @@ h1,h4 {
     position: absolute;
     left: 428px;
     top: 2011px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
@@ -1410,7 +1410,7 @@ h1,h4 {
     position: absolute;
     left: 800px;
     top: 1691px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -1421,7 +1421,7 @@ h1,h4 {
     position: absolute;
     left: 800px;
     top: 1823px;
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 24px;
@@ -1432,7 +1432,7 @@ h1,h4 {
     position: absolute;
     left: 800px;
     top: 1868px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -1443,7 +1443,7 @@ h1,h4 {
     position: absolute;
     right: 30px;
     top: 2214px;
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 22px;
@@ -1462,7 +1462,7 @@ footer{
     text-align: center;
     color: #6C9083;
     font-weight: bold;
-    font-family: "Sansita", sans-serif;
+    font-family: "Vollkorn", sans-serif;
 }
 
 #footer_line{
@@ -1596,7 +1596,7 @@ footer{
 
 .s_img_text{
     position: absolute;;
-    width: 496px;
+    width: 800px;
     height: 30px;
     left: 30px;
     top: 1280px;
@@ -1649,6 +1649,7 @@ footer{
     width: 178px;
     height: 178px;
     left: 650px;
+    border-radius: 50%;
     top: 1460px;
 }
 
@@ -1683,6 +1684,45 @@ footer{
     height: 178px;
     left: 950px;
     top: 1700px;
+}
+.first_button {
+    position: absolute;
+    width: 178px;
+    left: 350px;
+    top: 1950px;
+}
+.first_button button {
+    padding: 20px 45px 20px 45px;
+    border-radius: 15px;
+    border: 0px;
+    background-color: #EE2B3A;
+    font-family: 'Vollkorn', serif;
+}
+.second_button {
+    position: absolute;
+    width: 178px;
+    left: 650px;
+    top: 1950px;
+}
+.second_button button {
+    padding: 20px 55px 20px 55px;
+    border-radius: 15px;
+    border: 0px;
+    background-color: #EE2B3A;
+    font-family: 'Vollkorn', serif;
+}
+.third_button { 
+    position: absolute;
+    width: 178px;
+    left: 950px;
+    top: 1950px;
+}
+.third_button button {
+    padding: 20px 45px 20px 45px;
+    border-radius: 15px;
+    border: 0px;
+    background-color: #EE2B3A;
+    font-family: 'Vollkorn', serif;
 }
 
 /*Back to home page*/
