--- a/main.css
+++ b/main.css
@@ -381,6 +381,10 @@ h1,h4 {
     font-family: 'Vollkorn', sans-serif;;
 }
 
+.coolors {
+    width: 68rem;
+    height: 40rem;
+}
 .color_pallete_topline {
     width: 1340px;
     height: 0px;
